# optics_toolkits

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pages.yml
bindings/csharp/: CMakeLists.txt
bindings/csharp/OpticsToolkits/: LayerStack.cs  NativeMethods.cs  OpticsStatus.cs  OpticsToolkits.csproj  Tmm.cs
bindings/fortran/: CMakeLists.txt  optics_toolkits.f90
bindings/matlab/: CMakeLists.txt  optics_tmm_mex.c
bindings/matlab/+optics/: LayerStack.m  tmm.m  write_csv.m
cmake/: optics_toolkits-config.cmake.in  optics_toolkits.pc.in  precision.cmake  python_plugins.cmake
docs/: Doxyfile  c-api.md  csharp.md  examples.md  fortran.md  index.md  mkdocs.yml  quickstart.md
examples/c/: 01_poynting_absorption.c  02_reflection_spectrum.c  03_transmission_spectrum.c  04_ellipsometry.c  05_surface_plasmon_resonance.c  CMakeLists.txt  README.md  common_example.h
examples/common/: output.h
examples/csharp/: README.md
examples/csharp/01_poynting_absorption/: 01_poynting_absorption.csproj  Program.cs
examples/csharp/02_reflection_spectrum/: 02_reflection_spectrum.csproj  Program.cs
examples/csharp/03_transmission_spectrum/: 03_transmission_spectrum.csproj  Program.cs
examples/csharp/04_ellipsometry/: 04_ellipsometry.csproj  Program.cs
examples/csharp/05_surface_plasmon_resonance/: 05_surface_plasmon_resonance.csproj  Program.cs
examples/csharp/Common/: Common.csproj  OutputHelper.cs
examples/fortran/: 01_poynting_absorption.f90  02_reflection_spectrum.f90  03_transmission_spectrum.f90  04_ellipsometry.f90  05_surface_plasmon_resonance.f90  CMakeLists.txt  README.md  csv_output.f90
examples/matlab/: README.md  ex_01_poynting_absorption.m  ex_02_reflection_spectrum.m  ex_03_transmission_spectrum.m  ex_04_ellipsometry.m  ex_05_surface_plasmon_resonance.m
include/optics_toolkits/: optics_tmm.h  optics_toolkits.h  optics_types.h  optics_viz.h
scripts/: check_examples.sh  ci_fetch_core.sh  ci_infra_minimal.sh  ci_setup_ssh.sh  gen_docs.sh  verify_matlab_bindings.sh
src/c/: optics_api.cpp  optics_tmm.cpp  optics_viz.cpp
src/c/internal/: exception_bridge.hpp  precision.hpp
tests/c/: CMakeLists.txt  test_tmm.c  test_viz.c
